# ros_perception_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: BoundingBoxList.msg  ImageCloud.msg  Object.msg  ObjectList.msg
srv/: GetObjectList.srv  RecognizeObject.srv
